<resources>
    <string name="app_name">Stingle Photos</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter_password">Please enter your master password</string>
    <string name="ok">OK</string>
    <string name="unexpected_error">Unexpected error %s</string>
    <string name="file_not_found">File not found!</string>
    <string name="setup_info">Please choose your master password. While no limit is put on what you can enter here, it is strongly advised that your password has at least 12 characters and contains lowercase and uppercase letters, digits and special symbols (!?/$%#). If your password is not secure enough then your photos/videos may be vulnerable to brute force attacks.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="password_not_match">Passwords don\'t match. Please enter the same password twice correctly.</string>
    <string name="password_empty">Password can\'t be empty.</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="home_folder">Home folder</string>
    <string name="settings">Settings</string>
    <string name="home_folder_desc">The folder on SD card to store your encrypted files</string>
    <string name="generating_key">Loging in. Please wait…</string>
    <string name="deleting_files">Deleting file(s)…</string>
    <string name="trashing_files">Moving file(s) to trash…</string>
    <string name="decrypting_files">Decrypting file(s)…</string>
    <string name="encrypting_files">Encrypting file(s)…</string>
    <string name="encrypting_photo">Encrypting photo…</string>
    <string name="encrypting_video">Encrypting video…</string>
    <string name="confirm_delete_files">Do you really want to delete %s files?</string>
    <string name="confirm_trash_files">Do you really want to move %s files to trash?</string>
    <string name="confirm_decrypt_files">You\'re about to decrypt %s files. They will be decrypted to your SD card and will be available to other apps. Are you sure you want to do it?</string>
    <string name="confirm_decrypt_files_s">You\'re about to decrypt a file. It will be decrypted to your SD card and will be available to other apps. Are you sure you want to do it?</string>
    <string name="confirm_delete_photo">Do you really want to delete this photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypt_files">Encrypt Files</string>
    <string name="photo_size">Photo Size</string>
    <string name="photo_size_descr">Size of photos to take</string>
    <string name="photo_size_choose">Please choose desired photo size</string>
    <string name="change_password">Change Password</string>
    <string name="changing_password">Changing password on files…</string>
    <string name="success_change_pass">Password has been successfully changed</string>
    <string name="success_decrypt">Successfully decrypted</string>
    <string name="import_desc">Import</string>
    <string name="enter_import_password">Please enter password for the file to be imported</string>
    <string name="delete_after_import">Delete imported files</string>
    <string name="import_btn">Import</string>
    <string name="importing_files">Importing files…</string>
    <string name="success_import">Successfully imported</string>
    <string name="import_fialed">Import failed! Either incorrect password has been entered or the file is corrupt</string>
    <string name="seconds">seconds</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="lock_time">Lock up the app after</string>
    <string name="lock_time_desc">Lock app if inactive for specified amount of time</string>
    <string name="seconds5">5 seconds</string>
    <string name="seconds10">10 seconds</string>
    <string name="seconds15">15 seconds</string>
    <string name="seconds20">20 seconds</string>
    <string name="seconds30">30 seconds</string>
    <string name="minute1">1 minute</string>
    <string name="minutes5">5 minutes</string>
    <string name="minutes10">10 minutes</string>
    <string name="minutes30">30 minutes</string>
    <string name="hour1">1 hour</string>
    <string name="share">Share</string>
    <string name="actions">Actions</string>
    <string name="share_as_is">Share encrypted by the master password</string>
    <string name="share_decrypt">Decrypt before sharing</string>
    <string name="before_sharing">Before sharing</string>
    <string name="enter_reencrypt_password">Please enter password for reencryption</string>
    <string name="reencrypting_files">Reencrypting files…</string>
    <string name="move">Move</string>
    <string name="enter_new_folder_name">Please enter name for new folder</string>
    <string name="success_created">Successfully created</string>
    <string name="failed_create_dir">Failed to create folder</string>
    <string name="choose_folder">Choose folder to move files to:</string>
    <string name="moving_files">Moving files…</string>
    <string name="failed_move_files">Failed to move files into given folder</string>
    <string name="home_dir">--Home Folder--</string>
    <string name="log_out">Log Out</string>
    <string name="delete_original_files">Do you want to delete original files?</string>
    <string name="success_delete_originals">Successfully deleted original files</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="encrypt">Encrypt</string>
    <string name="add_files">Add Files</string>
    <string name="volume_take_photo">Volume Up/Down</string>
    <string name="volume_take_photo_desc">Volume Up/Down takes picture</string>
    <string name="timer_duration">Timer Duration</string>
    <string name="timer_duartion_desc">Camera Timer Duration</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="no_files">No files in this folder</string>
    <string name="password_short">Password have to be at least %s characters long</string>
    <string name="import_photos">Photos</string>
    <string name="flash">Flash</string>
    <string name="timer">Timer</string>
    <string name="get_pro">Get Pro Version</string>
    <string name="unable_to_connect_camera">Sorry, unable to connect to camera. Probably camera is busy right now.</string>
    <string name="sign_up">Sign Up</string>
    <string name="bottom_text">https://stingle.org</string>
    <string name="popup_title">Enjoying SafeCamera?</string>
    <string name="popup_text">If you like SafeCamera and use it on regular basis, we will really appreciate if you could leave review in play store and let others know what you think.</string>
    <string name="review">Review</string>
    <string name="later">Later</string>
    <string name="read_security">SafeCamera security</string>
    <string name="login_to_proceed">Please login to proceed…</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_desc">Clear thumbnail cache</string>
    <string name="confirm_delete_cache">Are you sure you want to delete whole thumbnail cache?</string>
    <string name="title_gallery">SafeCamera</string>
    <string name="title_gallery_for_app">Gallery</string>
    <string name="title_view_photo">Photos</string>
    <string name="title_setup">Set Up</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_choose_file">Browse</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_import">Import</string>
    <string name="multi_select">Multi Select</string>
    <string name="options">Options</string>
    <string name="pro_version_warning">This feature is avalable in PRO version. Do you want to purchase SafeCamera PRO version?</string>
    <string name="rotate_cw">Rotate clockwise</string>
    <string name="rotate_ccw">Rotate counter clockwise</string>
    <string name="rotating">Rotating…</string>
    <string name="attention">ATTENTION!!!</string>
    <string name="same_password_alert">It seems that you already had Stingle Photos installed on this device before.\nIf you want to be able to access photos that exist on this device setup with same master password that you have used before, otherwise SafeCamera will be unable to decrypt them.</string>
    <string name="understood">Understood!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">If you forgot your password thats very sad, because we can\'t help you to recover it. It was never stored anywhere! Sorry, that\'s the cost for absolute security. However we can reset your password so you can continue using SafeCamera, but all your existing photos will become unavailable.\n\nAre you sure you want to reset your password?</string>
    <string name="need_to_relogin">Master password in newly selected folder is different than the current one. Please login again.</string>
    <string name="secure_delete">Secure wipe files (takes longer)</string>
    <string name="internal_sd_card">"Internal SD card"</string>
    <string name="external_sd_card">"External SD card"</string>
    <string name="read_only">"Read Only"</string>
    <string name="dec_folder">"Decrypted files folder name"</string>
    <string name="dec_folder_desc">"Folder name for decrypted files in selected location"</string>
    <string name="dec_folder_def">"SafeCameraDecrypted"</string>
    <string name="custom_folder">"Custom folder"</string>
    <string name="no_such_folder">"There is no such folder %s"</string>
    <string name="home_folder_name">"Home folder name"</string>
    <string name="home_folder_name_desc">"Name of the SafeCamera folder in selected location"</string>
    <string name="home_folder_problem_title">"Problem with SafeCamera folder"</string>
    <string name="home_folder_problem">"Main folder does not exist or is not writable. Do you want to reset main folder location?"</string>
    <string name="home_folder_incorrect">"Sorry, home folder is now pointing to non writable destination, please select valid home folder path"</string>
    <string name="multiselect_exit">"Exit Multi Select"</string>
    <string name="please_enter_password">"Please enter password"</string>
    <string name="please_enter_password_desc">"To view gallery you need to provide password"</string>
    <string name="use_fingerprint">"Fingerprint authentication"</string>
    <string name="use_fingerprint_desc">"Use your fingerprint instead of entering password"</string>
    <string name="error_fingerprint_perm">"Please enable the fingerprint permission"</string>
    <string name="error_fingerprint_enroll">"No fingerprint configured. Please register at least one fingerprint in your device's Settings"</string>
    <string name="enter_password_desc">"Please enter your password to continue"</string>
    <string name="shutter_sound">Camera shutter sound</string>
    <string name="shutter_sound_desc">Play sound when taking photos</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="back_camera_photo_res">Back camera photo resolution</string>
    <string name="back_camera_video_res">Back camera video resolution</string>
    <string name="front_camera_photo_res">Front camera photo resolution</string>
    <string name="front_camera_video_res">Front camera video resolution</string>
    <string name="email">Email</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_trash">Trash</string>
    <string name="sign_in">Sign In</string>
</resources>