<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    	 <ListPreference 
            android:key="home_folder"
            android:title="@string/home_folder"
            android:summary="@string/home_folder_desc" />
    	 
    	 <EditTextPreference
			android:key="home_folder_name"
			android:title="@string/home_folder_name"
			android:summary="@string/home_folder_name_desc"
			android:defaultValue="@string/default_home_folder_name" />
    	 
    	 <EditTextPreference
			android:key="dec_folder"
			android:title="@string/dec_folder"
			android:summary="@string/dec_folder_desc"
			android:defaultValue="@string/dec_folder_def" />
    	 
    	 <ListPreference 
            android:key="lock_time"
            android:title="@string/lock_time"
            android:summary="@string/lock_time_desc"
            android:defaultValue="60" 
            android:entries="@array/lockTimes"
            android:entryValues="@array/lockTimesValues" />
    	 
		<CheckBoxPreference
    	    android:key="volume_take_photo"
    	    android:title="@string/volume_take_photo"
    	    android:summary="@string/volume_take_photo_desc"
    	    android:defaultValue="true" />

        <CheckBoxPreference
            android:key="shutter_sound"
            android:title="@string/shutter_sound"
            android:summary="@string/shutter_sound_desc"
            android:defaultValue="true" />
		
		<ListPreference 
            android:key="timerDuration"
            android:title="@string/timer_duration"
            android:summary="@string/timer_duartion_desc"
            android:defaultValue="10" 
            android:entries="@array/timerDurations"
            android:entryValues="@array/timerDurationValues" />
		
		<Preference
		    android:key="clear_cache"
    	    android:title="@string/clear_cache"
    	    android:summary="@string/clear_cache_desc" />

</PreferenceScreen>
