<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="volume_take_photo"
        android:summary="@string/volume_take_photo_desc"
        android:title="@string/volume_take_photo" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="shutter_sound"
        android:summary="@string/shutter_sound_desc"
        android:title="@string/shutter_sound" />

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/timerDurations"
        android:entryValues="@array/timerDurationValues"
        android:key="timerDuration"
        android:summary="@string/timer_duartion_desc"
        android:title="@string/timer_duration" />

    <PreferenceCategory
        android:title="@string/photo"
        android:key="photo_res"
        android:selectable="false">
        <ListPreference
            android:key="back_photo_res"
            android:title="@string/back_camera_photo_res" />
        <ListPreference
            android:key="front_photo_res"
            android:title="@string/front_camera_photo_res" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/video"
        android:key="video_res"
        android:selectable="false">
        <ListPreference
            android:key="back_video_res"
            android:title="@string/back_camera_video_res" />
        <ListPreference
            android:key="front_video_res"
            android:title="@string/front_camera_video_res" />
    </PreferenceCategory>

</PreferenceScreen>
