<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/log_out"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        android:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/change_password"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/change_password" />
    <item
        android:id="@+id/read_security"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/read_security" />
    <item
        android:id="@+id/test"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="Test" />

</menu>