<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

	<ImageView
		android:id="@+id/imageView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:src="@mipmap/ic_stingle_photos_round"
		android:layout_gravity="center"
		android:contentDescription="@string/app_name" />


    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/sign_in" />

	<EditText
		android:id="@+id/email"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dp"
		android:hint="@string/email"
		android:inputType="textEmailAddress">

		<requestFocus />
	</EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:imeOptions="actionGo"
		android:hint="@string/password">
    </EditText>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/sec_color_light"
        android:layout_marginRight="10dp"
        android:textSize="12sp"
        android:text="@string/forgot_password" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/sign_in" />


	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="bottom"
		android:orientation="vertical">

		<TextView
			android:id="@+id/versionText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom"
			android:gravity="center"
			android:textColor="@color/sec_color_light" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|bottom"
			android:autoLink="web"
			android:gravity="center"
			android:paddingBottom="15dp"
			android:text="@string/bottom_text" />
	</LinearLayout>
</LinearLayout>
