<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:safecam="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg_color">



    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="50dp"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:background="@color/main_bg_color">

        <ImageButton
            android:id="@+id/timerButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/timer"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/timer_disabled" />

        <ImageButton
            android:id="@+id/flashButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@null"
            android:contentDescription="@string/flash"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/flash_off" />

        <ImageButton
            android:id="@+id/optionsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@null"
            android:contentDescription="@string/options"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_options" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/textureHolder"
        android:layout_toRightOf="@id/topPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    </LinearLayout>

    <com.fenritz.safecam.widget.FocusCircleView
        android:id="@+id/focusCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/topPanel"/>

    <ImageButton
        android:id="@+id/modeChanger"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_photo"
        android:layout_toLeftOf="@id/rightPanel">

    </ImageButton>
    <LinearLayout
        android:id="@+id/timerLabelContainer"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="#000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/timerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rightPanel"
        android:layout_width="90dp"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/main_bg_color_trans">

        <ImageButton
            android:id="@+id/switchCamButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:contentDescription="@string/camera"
            android:src="@drawable/ic_switch_camera"
            android:scaleType="fitCenter"
            android:layout_marginTop="10dp"
            android:visibility="visible" />


        <ImageButton
            android:id="@+id/take_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/button_shutter" />

        <ImageView
            android:id="@+id/lastPhoto"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/gallery"
            android:src="@android:drawable/ic_menu_gallery"
            android:visibility="visible" />
    </RelativeLayout>

</RelativeLayout>
